--- a/mynetbookfix.css
+++ b/mynetbookfix.css
@@ -2,7 +2,7 @@
 @name        小说网站个人习惯修正
 @namespace   https://github.com/kli2013
 @version     1.0.0 
-@updateURL   https://raw.githubusercontent.com/StylishThemes/Quora-Dark/master/quora-dark.user.css
+@updateURL   https://github.com/kli2013/myrule/blob/master/mynetbookfix.css
 @license
 @author     kli
 ==/UserStyle== */
