Update and rename mynetbookfix.css to mynetbookfix.user.css

--- a/mynetbookfix.user.css
+++ b/mynetbookfix.user.css
@@ -2,7 +2,7 @@
 @name        小说网站个人习惯修正
 @namespace   https://github.com/kli2013
 @version     1.0.0 
-@updateURL   https://github.com/kli2013/myrule/blob/master/mynetbookfix.css
+@updateURL   https://github.com/kli2013/myrule/blob/master/mynetbookfix.user.css
 @license
 @author     kli
 ==/UserStyle== */
