--- a/mynetbookfix.user.css
+++ b/mynetbookfix.user.css
@@ -3,7 +3,7 @@
 @namespace   https://github.com/kli2013
 @version     1.0.0 
 @updateURL   https://github.com/kli2013/myrule/blob/master/mynetbookfix.user.css
-@license
+@license   33
 @author     kli
 ==/UserStyle== */
 
