--- a/mynetbookfix.user.css
+++ b/mynetbookfix.user.css
@@ -3,7 +3,8 @@
 @namespace   https://github.com/kli2013
 @version     1.0.0 
 @updateURL   https://github.com/kli2013/myrule/blob/master/mynetbookfix.user.css
-@license     CC-BY-SA-4.0
+@license      unlicense
+@preprocessor default
 @author     kli
 ==/UserStyle== */
 
